<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TrailActivity">
    <item
        android:id="@+id/action_Alphanumeric"
        android:orderInCategory="100"
        android:title="@string/alphanumeric"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Rating"
        android:orderInCategory="101"
        android:title="@string/rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Type"
        android:orderInCategory="102"
        android:title="@string/type"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Difficulty"
        android:orderInCategory="103"
        android:title="@string/difficulty"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Search"
        android:orderInCategory="0"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon ="@drawable/ic_action_name" />
</menu>
